--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@popperjs/core": "^2.11.5",
         "bootstrap": "^5.1.3",
         "core-js": "^3.8.3",
+        "firebase": "^9.8.3",
         "gsap": "^3.10.4",
         "jquery": "^3.6.0",
         "vue": "^3.2.13"
